<resources>
    <string name="app_name">Task2HNDDanielHung</string>
    <string name="login">Introduce el usuario</string>
    <string name="log">Usuario</string>
    <string name="pass">Password</string>
    <string name="password">Introduce la contraseña</string>
    <string name="entrar">Iniciar sesión</string>
    <string name="registrar">Registrarse</string>
    <string name="loginact">LoginActivity</string>
    <string name="title_activity_registro">RegistroActivity</string>
    <string name="nombre">Nombre</string>
    <string name="nombre2">Introduce tu nombre</string>
    <string name="apellidos">Apellidos</string>
    <string name="apellidos2">Introduce tus apellidos</string>
    <string name="email">E-mail</string>
    <string name="email2">Introduce tu correro electrónico</string>
    <string name="passre">Contraseña</string>
    <string name="passre2">Introduce una contraseña</string>
    <string name="passcon">Repite la contraseña</string>
    <string name="passcon2">Introduce de nuevo la contraseña</string>
    <string name="terminos">Acepto los términos y condiciones legales</string>
    <string name="user">Usuario</string>
    <string name="user2">Introduce el usuario</string>
    <string name="perfil">Perfil</string>
    <string name="descripcion">Descripción</string>
    <string name="personajes">Naves</string>
    <string name="objetos">Objetos</string>
    <string name="tips">Tips</string>
    <string name="ajustes">Ajustes</string>
    <string name="salir">Cerrar sesión</string>
    <string name="passmatch">Las contraseñas no coinciden</string>
    <string name="usuarioguardado">El usuario se ha guardado correctamente</string>
    <string name="required">Todos los datos son obligatorios</string>
    <string name="userrequired">El usuario no existe</string>
    <string name="incorrect">Los datos introducidos no son correctos</string>
    <string name="saved">Todos lo datos se han guardado correctamente</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="editar">Editar cuenta</string>
    <string name="titulojuego">Space Effect</string>
    <string name="sinopsis">Necesitas destruir la nave base para poder rescatar a tus compañeros</string>
    <string name="controles">Utiliza las teclas WASD para poder moverte, la barra espaciadora para disparar</string>
    <string name="version">Version 1.0</string>
    <string name="compartir">Compartir texto</string>
    <string name="info">Información</string>
    <string name="facts">Características</string>
    <string name="actualizaciones">Actualizaciones</string>
    <string name="contact">Contáctanos</string>
    <string name="informacion">Juego desarrollado por DHG</string>
    <string name="caracteristicas">Juego de naves</string>
    <string name="updates">Añadida nueva animación</string>
    <string name="contactanos">Envía un email a dhg@gmail.com</string>
    <string name="imagen">Editar imagen</string>
    <string name="newpass">Introduce la nueva contraseña</string>
    <string name="volver">Volver</string>
    <string name="guardar">Guardar</string>
    <string name="newuser">Nuevo nombre de usuario</string>
    <string name="newmail">Nuevo correo</string>
</resources>
