<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_registro"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.example.alumnodanielhung.task2hnddanielhung.activities.RegistroActivity">

    <TextView android:id="@+id/txtUser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/user"
        android:textAlignment="center"
        android:textSize="20dp"/>

    <EditText android:id="@+id/editUser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/user2"/>

    <TextView android:id="@+id/txtNombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nombre"
        android:textAlignment="center"
        android:textSize="20dp"/>

    <EditText android:id="@+id/editNombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/nombre2"/>

    <TextView android:id="@+id/txtApellidos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/apellidos"
        android:textAlignment="center"
        android:textSize="20dp"/>

    <EditText android:id="@+id/editApellidos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/apellidos2"/>

    <TextView android:id="@+id/txtEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:textAlignment="center"
        android:textSize="20dp"/>

    <EditText android:id="@+id/editEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email2"
        android:inputType="textEmailAddress"/>

    <TextView android:id="@+id/txtPassre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/passre"
        android:textAlignment="center"
        android:textSize="20dp"/>

    <EditText android:id="@+id/editPassre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/passre2"
        android:inputType="textPassword"/>

    <TextView android:id="@+id/txtPasscon"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/passcon"
        android:textAlignment="center"
        android:textSize="20dp"/>

    <EditText android:id="@+id/editPasscon"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/passcon2"
        android:inputType="textPassword"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <CheckBox android:id="@+id/checkTerminos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView android:id="@+id/txtTerminos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/terminos"/>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button android:id="@+id/btnGuardar"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/registrar"
            android:layout_weight="1"/>

        <Button android:id="@+id/btnIniciar"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/entrar"
            android:layout_weight="1"/>
    </LinearLayout>

</LinearLayout>
