<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:layout_marginTop="200dp"
    android:orientation="vertical"
    tools:context="com.example.alumnodanielhung.task2hnddanielhung.activities.LoginActivity">

    <TextView android:id="@+id/txtUsuario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/log"
        android:gravity="center"
        android:textSize="20dp"/>

    <EditText android:id="@+id/editUsuario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/login"
        android:gravity="center"/>

    <TextView android:id="@+id/txtPass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pass"
        android:gravity="center"
        android:textSize="20dp"/>

    <EditText android:id="@+id/editPass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:gravity="center"
        android:inputType="textPassword"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button android:id="@+id/btnLog"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/entrar"
            android:layout_weight="1"/>

        <Button android:id="@+id/btnRegistrar"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/registrar"
            android:layout_weight="1"/>

    </LinearLayout>

</LinearLayout>
