<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginTop="25dp"
    tools:context="com.example.alumnodanielhung.task2hnddanielhung.fragments.DescripcionFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/titulojuego"
        android:textSize="30dp"
        android:textStyle="bold"
        android:textAlignment="center"/>

    <ImageView
        android:layout_width="250dp"
        android:layout_height="150dp"
        android:layout_margin="10dp"
        android:layout_gravity="center"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sinopsis"
        android:layout_margin="10dp"
        />

    <ImageView
        android:layout_width="250dp"
        android:layout_height="150dp"
        android:layout_gravity="center"
        android:layout_margin="10dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/controles"
        android:layout_margin="10dp"/>

</LinearLayout>
