<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_edit"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.example.alumnodanielhung.task2hnddanielhung.activities.EditActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/newpass"
        android:textAlignment="center"
        android:layout_marginBottom="20dp"/>

    <EditText android:id="@+id/newPass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/newpass"
        android:layout_marginBottom="20dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/newuser"
        android:textAlignment="center"
        android:layout_marginBottom="20dp"/>

    <EditText android:id="@+id/newUser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/newuser"
        android:layout_marginBottom="20dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/newmail"
        android:textAlignment="center"
        android:layout_marginBottom="20dp"/>

    <EditText android:id="@+id/newMail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/newmail"
        android:layout_marginBottom="100dp"/>

    <Button android:id="@+id/btnVolver"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/guardar"
        android:layout_gravity="center"/>

</LinearLayout>
